--- a/common/pom.xml
+++ b/common/pom.xml
@@ -35,8 +35,35 @@
             <version>1.37.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.beosign</groupId>
+            <artifactId>snakeyaml-anno</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
+        <dependency>
+            <groupId>com.hierynomus</groupId>
+            <artifactId>sshj</artifactId>
+            <version>0.31.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <build>
         <extensions>
@@ -67,5 +94,7 @@
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
