--- a/master/pom.xml
+++ b/master/pom.xml
@@ -11,6 +11,14 @@
     </parent>
     <artifactId>master</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.yinan</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
