--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>worker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.yinan</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
